openshift/base/data-index-infinispan.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-index-infinispan
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: data-index-infinispan
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: "data-index-infinispan"
  name: data-index-infinispan
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: data-index-infinispan
  template:
    metadata:
      labels:
        app.kubernetes.io/name: data-index-infinispan
    spec:
      containers:
        - name: data-index-infinispan
          image: quay.io/kiegroup/kogito-data-index-infinispan
          imagePullPolicy: Always          
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          volumeMounts:
          - mountPath: /home/jboss/data/protobufs/
            name: protobufs
            readOnly: false           
      serviceAccountName: data-index-infinispan
      volumes:
      - configMap:
          defaultMode: 384
          name: protpbuf-config
          optional: false
        name: protobufs
